--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
    <meta name='viewport' content='width=device-width, initial-scale=1'>
   <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
   
-    <title>Dark - Apis</title>
+    <title>REDZIN API</title>
     <style>
 @import url("https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@400;500;600;700&display=swap");
 
@@ -493,11 +493,11 @@ font-size: 22px;
 
 <div class="center-image">
 <a href="#" alt="Redzin: criador">
-<img class="round-image" src="https://telegra.ph/file/0277179fcb6fe1bd054ca.jpg" alt="by Redzin">
+<img class="round-image" src="https://telegra.ph/file/6be8c83b9c3d91735df0f.jpg" alt="by Redzin">
 </a>
 </div>
 <center>
-  <i class="darkin">DARK - API</i>
+  <i class="darkin">REDZIN - API</i>
 </center>
 
 <br></br>
@@ -513,7 +513,7 @@ SEJAM BEM VINDO<span class="text-brand"> A REDZIN API</span>
 <div data-aos="fade-up" data-aos-delay="600">
           
 <a
-href="https://chat.whatsapp.com/He2LRVtIwTK45wH4M1J18w"
+href="https://chat.whatsapp.com/He2LRVtIwTK45wH4Mw"
 target="_blank"
 class="btn btn-brand me-3"
 >
@@ -534,7 +534,7 @@ class="btn btn-brand me-3"
 DASHBOARD</a>
 
 <a
-href="https://whatsapp.com/channel/0029Vacq6e0IXnlniRvdFe2a"
+href="https://whatsapp.com/channel/0029Vacq6elniRvdFe2a"
 target="_blank"
 class="btn btn-brand me-3"
 >
@@ -675,7 +675,7 @@ Adquir Plano Adm
                 <div class="card-custom-image rounded-4">
                   <img
                     class="rounded-4"
-                    src="https://telegra.ph/file/f5cb7615bcdf2ccb12fc3.jpg"
+                    src="https://telegra.ph/file/e0cf5a702c197bd89bed0.jpg"
                     alt=""
                   />
                 </div>
@@ -699,7 +699,7 @@ Comprar Agora
                 <div class="card-custom-image rounded-4">
                   <img
                     class="rounded-4"
-                    src="https://telegra.ph/file/f5166869171006766389c.jpg"
+                    src="https://telegra.ph/file/b381ddb2d091c4b90d157.jpg"
                     alt=""
                   />
                 </div>
@@ -724,14 +724,14 @@ Comprar Agora
                 <div class="card-custom-image rounded-4">
                   <img
                     class="rounded-4"
-                    src="https://telegra.ph/file/c6b253f5a2854de4cd464.jpg"
+                    src="https://telegra.ph/file/edc73dbac807446f07e38.jpg"
                     alt=""
                   />
                 </div>
                 <div class="card-custom-content p-4">
 <center><h4>Marília - Bot NodeJS</h4></center>
  <center><p> Olá, Gostaria De Adquirir A Marilia✨🤗</p> </center>
- <center><a class="btn" href="https://wa.me/557186601260/?text=Olá Gostaria De Adquirir A Marília">
+ <center><a class="btn" href="https://wa.me/5512988255401/?text=Olá Gostaria De Adquirir A Marília">
 <span></span>
 <span></span>
 <span></span>
