--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@ font-size: 22px;
             <div class="col-lg-10">
             <center>
 <h1 class="display-4 fw-bold" data-aos="fad-up">
-SEJAM BEM VINDO<span class="text-brand"> A REDZIN API</span> 
+SEJA BEM VINDO<span class="text-brand"> A REDZIN API</span> 
 </h1>
 <h3 id="text"></h3>
 <div data-aos="fade-up" data-aos-delay="600">
@@ -555,7 +555,7 @@ CANAL</a>
 <div class="row pb-4" data-aos="fade-up">
 <div class="col-lg-8">
 <center>
-<h1 class="display-4 fw-bold" data-aos="fade-up">CRIADORES<span class="text-brand"></span> 
+<h1 class="display-4 fw-bold" data-aos="fade-up">CRIADORE<span class="text-brand"></span> 
 </h1>
 <center>
 </div>
@@ -585,7 +585,7 @@ Instagram
 <i class="mdi mdi-youtube"></i>
 </div>
 <h5 class="mt-4 mb-2"></h5>
-<p>Primeiro amarás o Corinthians e só assim então poderá amar outro alguém!
+<p>A Vida É Muito Curta Para Perder Um Segundo
 </p>
 <center><a class="btn" href="/valores">
 <span></span>
@@ -756,7 +756,7 @@ Comunidade
                 </div>
                 <div class="card-custom-content p-4">
 <center><h4>Novidades</h4></center>
- <center><p> Qualquer Bovidades Serão Postados Aqui 🪐</p> </center>
+ <center><p> Qualquer Novidades Serão Postados Aqui 🪐</p> </center>
 
 
                   <class class="card-custom-buttons">
@@ -798,7 +798,7 @@ $('.menu-btn').css("visibility", "visible");
     </script>
     <script>
 const textElement = document.getElementById('text');
-const phrases = ['Bem-Vindo❤', 'Ainda Emm Desenvolvimento⚙️'];
+const phrases = ['Bem-Vindo❤', 'Em Desenvolvimento⚙️'];
 let phraseIndex = 0;
 let letterIndex = 0;
 
