--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@ CANAL</a>
 <div class="row pb-4" data-aos="fade-up">
 <div class="col-lg-8">
 <center>
-<h1 class="display-4 fw-bold" data-aos="fade-up">CRIADORE<span class="text-brand"></span> 
+<h1 class="display-4 fw-bold" data-aos="fade-up">CRIADOR<span class="text-brand"></span> 
 </h1>
 <center>
 </div>
@@ -576,22 +576,6 @@ CANAL</a>
 <span></span>
 Instagram
 </a> </center>
-</div>
-</div>
-
-<div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
-<div class="service p-4 bg-base rounded-4 shadow-effect">
-<div class="iconbox rounded-4">
-<i class="mdi mdi-youtube"></i>
-</div>
-<h5 class="mt-4 mb-2"></h5>
-<p>A Vida É Muito Curta Para Perder Um Segundo
-</p>
-<center><a class="btn" href="/valores">
-<span></span>
-<span></span>
-<span></span>
-<span></span>Canal</a> </center>
 </div>
 </div>
 
@@ -730,7 +714,7 @@ Comprar Agora
                 </div>
                 <div class="card-custom-content p-4">
 <center><h4>Marília - Bot NodeJS</h4></center>
- <center><p> Olá, Gostaria De Adquirir A Marilia✨🤗</p> </center>
+ <center><p> Clique Aqui Para Adquirir A Marilia✨🤗</p> </center>
  <center><a class="btn" href="https://wa.me/5512988255401/?text=Olá Gostaria De Adquirir A Marília">
 <span></span>
 <span></span>
