--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@ SEJA BEM VINDO<span class="text-brand"> A REDZIN API</span>
 <div data-aos="fade-up" data-aos-delay="600">
           
 <a
-href="https://chat.whatsapp.com/He2LRVtIwTK45wH4Mw"
+href="https://te.me/@RedzinK"
 target="_blank"
 class="btn btn-brand me-3"
 >
@@ -521,7 +521,7 @@ class="btn btn-brand me-3"
 <span></span>
 <span></span>
 <span></span>
-GRUPO</a>
+TELEGRAM</a>
 
 <a
 href="/login"
@@ -534,7 +534,7 @@ class="btn btn-brand me-3"
 DASHBOARD</a>
 
 <a
-href="https://whatsapp.com/channel/0029Vacq6elniRvdFe2a"
+href="https://www.instagram.com/redzinyz?igsh=enRpNzg1cGRia2I5"
 target="_blank"
 class="btn btn-brand me-3"
 >
@@ -542,7 +542,7 @@ class="btn btn-brand me-3"
 <span></span>
 <span></span>
 <span></span>
-CANAL</a>
+INSTAGRAM</a>
 </div>
 </center>
             </div>
@@ -565,7 +565,7 @@ CANAL</a>
 <div class="col-md-4" data-aos="fade-up">
 <div class="service p-4 bg-base rounded-4 shadow-effect">
 <div class="iconbox rounded-4">
-<i class="mdi mdi-youtube"></i>
+<i class="mdi mdi-instagram"></i>
 </div>
 <h5 class="mt-4 mb-2">Redzin</h5>
 <p>Sua Fé É O Combustível Que Te Leva Ao Caminho Da Vitória</p>
